--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^9.6.6",
     "firebase-tools": "^10.1.5",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
