added part of the shopping cart component. Added the authentication module, components, guards, routing and service

--- a/angular.json
+++ b/angular.json
@@ -110,6 +110,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "online_bookstore:build:production",
+            "firebaseProject": "online-book-store-a405d",
+            "firebaseHostingSite": "online-book-store-a405d"
+          }
         }
       }
     }
